# cpp_mandelbrot

./: CMakeLists.txt  glad.c  main.cpp  rendering.hpp  shader.hpp  window.hpp
.cache/clangd/index/: cocoa_init.m.7A1718604A5DF08F.idx  cocoa_joystick.h.C534AB91CB6869B8.idx  cocoa_joystick.m.47827987D5167165.idx  cocoa_monitor.m.E7FE4AE1D1C11EA6.idx  cocoa_platform.h.5BC1FF01907ED335.idx  cocoa_time.c.34113B8FD646E5EF.idx  cocoa_time.h.E259DC1ADAB1D5C5.idx  cocoa_window.m.0A5188574FC784E2.idx  context.c.42937C09BA22FC19.idx  egl_context.c.BDC9B29DA968C5C6.idx  glad.c.08CD5DAE27535E81.idx  glad.h.23256BF2675D367E.idx  glfw3.h.6AEC64A8BFEE6FDD.idx  glfw3native.h.0621E1E3FE4CEA8F.idx  init.c.74040B1929F80DB8.idx  input.c.5375EE829E4F4BE8.idx  internal.h.201082EAE7BEEB32.idx  khrplatform.h.11B2C755ACB1EAA9.idx  main.cpp.6FB67E24446159FD.idx  mappings.h.706B5FE1CCB012F6.idx  monitor.c.A987C9DD4EB8BA96.idx  nsgl_context.m.EB7E58BDA88B1D40.idx  null_init.c.895B8E97D981DCC0.idx  null_joystick.c.D95D7EA38D1FF292.idx  null_joystick.h.3078FE87FE6B32E9.idx  null_monitor.c.4B437FCC7B43055C.idx  null_platform.h.5578AAB2B8CCDF6E.idx  null_window.c.194F73E96AE80FB8.idx  osmesa_context.c.786F65210EA71D41.idx  platform.c.5DC146129127213E.idx  platform.h.C940A2A6890069E9.idx  posix_module.c.B001D615D820BE6A.idx  posix_thread.c.8FA8F508EB2FA10F.idx  posix_thread.h.5B1B3699E10F1AE2.idx  rendering.hpp.B4105F5BCCB763CD.idx  shader.hpp.39551A5024259A76.idx  vulkan.c.0B6F08C1C1B39BC0.idx  window.c.0C8A6D94161D6A69.idx  (+1 more)
include/glad/: glad.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
